dataset1235/2025-2/2868285114/users/154215138/executions/3792430146_4142573950.log
== RUN (2025-09-02 23:02:35)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
qtd_arredondado = qtd * 1.5
print(round(qtd_arredondado,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    qtd_arredondado = qtd * 1.5
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 3
    qtd_arredondado = qtd * 1.5
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 3
    qtd_arredondado = qtd * 1.5
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 3
    qtd_arredondado = qtd * 1.5
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 3
    qtd_arredondado = qtd * 1.5
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 3
    qtd_arredondado = qtd * 1.5
    ^
IndentationError: expected an indented block after 'if' statement on line 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:53:53)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd <= 12:
  print(qtd * 1.5)
else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morango: 18.0
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morango: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morango: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morango: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:01:30)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  qtd_arredondado = qtd * 1.5
print(round(qtd_arredondado,2))
else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:54:17)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd <= 12:
  print(qtd * 1.5)
else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morango: 18.0
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morango: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morango: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morango: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:04:27)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  qtd_arredondado = qtd * 1.5
  print(round(qtd_arredondado,2))
else:
  qtd_arredondado1 = qtd * 1.35
  print(round(qtd_arredondado1,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morango: 16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morango: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morango: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morango: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:02:01)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  qtd_arredondado = qtd * 1.5
print(round(qtd_arredondado,2))

-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:53:58)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd <= 12:
  print(qtd * 1.5)
else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morango: 18.0
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morango: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morango: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morango: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:02:01)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  qtd_arredondado = qtd * 1.5
print(round(qtd_arredondado,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:04:43)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  qtd_arredondado = qtd * 1.5
  print(round(qtd_arredondado,2))
else:
  qtd_arredondado1 = qtd * 1.35
  print(round(qtd_arredondado1,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morango: 16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morango: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morango: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morango: 28.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:59:11)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  print(round(qtd * 1.5),2))
else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    print(round(qtd * 1.5),2))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 3
    print(round(qtd * 1.5),2))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 3
    print(round(qtd * 1.5),2))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 3
    print(round(qtd * 1.5),2))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 3
    print(round(qtd * 1.5),2))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 3
    print(round(qtd * 1.5),2))
                             ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:01:42)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  qtd_arredondado = qtd * 1.5
print(round(qtd_arredondado,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(qtd_arredondado,2))
                ^^^^^^^^^^^^^^^
NameError: name 'qtd_arredondado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:55:36)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  print(qtd * 1.5)
else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morango: 16.200000000000003
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morango: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morango: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morango: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:01:19)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd < 12:
  qtd_arredondado = qtd * 1.5
  print(round(qtd_arredondado,2))
  else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 5
    else:
    ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:54:07)
-- CODE: 
qtd = int(input("Quantidade de morango: "))
if qtd <= 12:
  print(qtd * 1.5)
else:
  print(qtd * 1.35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
Quantidade de morango: 10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
Quantidade de morango: 18.0
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
Quantidade de morango: 33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
Quantidade de morango: 4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
Quantidade de morango: 17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
Quantidade de morango: 28.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
